[gd_scene load_steps=23 format=2]

[ext_resource path="res://Scenes/MainMenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Scenes/MainMenu/MainMenuButtons.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/OptionsMenu/MasterOptionsMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Themes/MainMenuTheme.tres" type="Theme" id=4]
[ext_resource path="res://Scenes/UI/SoundButton/SoundButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Credits/Credits.tscn" type="PackedScene" id=8]

[sub_resource type="Animation" id=5]
resource_name = "CloseSubMenu"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("MenuContainer/MainMenuButtons:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FlowControlContainer/FlowControl/BackButton:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=1]
resource_name = "Intro"
length = 2.4
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 2.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "intro_done"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TitleContainer/Titles/TitlesContainer/Title:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TitleContainer/Titles/TitlesContainer/SubTitle:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.8, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MenuContainer/MainMenuButtons:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.6, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("MenuContainer/MainMenuButtons:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=6]
resource_name = "MainMenuOpen"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("TitleContainer/Titles/TitlesContainer/Title:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TitleContainer/Titles/TitlesContainer/SubTitle:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MenuContainer/MainMenuButtons:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MenuContainer/MainMenuButtons:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "OpenSubMenu"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("MenuContainer/MainMenuButtons:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FlowControlContainer/FlowControl/BackButton:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "Outro"
length = 0.5

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MenuContainer/MainMenuButtons:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FlowControlContainer/FlowControl/BackButton:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TitleContainer/Titles/TitlesContainer/Title:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TitleContainer/Titles/TitlesContainer/SubTitle:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("MenuContainer/MainMenuButtons:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "CloseSubMenu"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "Intro"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "MainMenuOpen"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "OpenSubMenu"

[sub_resource type="AnimationNodeStateMachineTransition" id=11]
advance_condition = "intro_done"

[sub_resource type="AnimationNodeStateMachineTransition" id=14]

[sub_resource type="AnimationNodeStateMachineTransition" id=15]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=16]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=8]
states/CloseSubMenu/node = SubResource( 12 )
states/CloseSubMenu/position = Vector2( 700, 232 )
states/Intro/node = SubResource( 7 )
states/Intro/position = Vector2( 230, 123 )
states/MainMenuOpen/node = SubResource( 10 )
states/MainMenuOpen/position = Vector2( 461, 123 )
states/OpenSubMenu/node = SubResource( 13 )
states/OpenSubMenu/position = Vector2( 700, 123 )
transitions = [ "Intro", "MainMenuOpen", SubResource( 11 ), "MainMenuOpen", "OpenSubMenu", SubResource( 14 ), "OpenSubMenu", "CloseSubMenu", SubResource( 15 ), "CloseSubMenu", "MainMenuOpen", SubResource( 16 ) ]
start_node = "Intro"

[sub_resource type="AnimationNodeStateMachinePlayback" id=9]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MenuAnimationPlayer" type="AnimationPlayer" parent="."]
anims/CloseSubMenu = SubResource( 5 )
anims/Intro = SubResource( 1 )
anims/MainMenuOpen = SubResource( 6 )
anims/OpenSubMenu = SubResource( 4 )
anims/Outro = SubResource( 3 )
anims/RESET = SubResource( 2 )

[node name="MenuAnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 8 )
anim_player = NodePath("../MenuAnimationPlayer")
active = true
parameters/playback = SubResource( 9 )
parameters/conditions/intro_done = false

[node name="TitleContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 32
custom_constants/margin_top = 64
custom_constants/margin_left = 32
custom_constants/margin_bottom = 16

[node name="Titles" type="Control" parent="TitleContainer"]
margin_left = 32.0
margin_top = 64.0
margin_right = 992.0
margin_bottom = 584.0
mouse_filter = 2

[node name="TitlesContainer" type="VBoxContainer" parent="TitleContainer/Titles"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -416.0
margin_right = 416.0
margin_bottom = 97.0
custom_constants/separation = 24

[node name="Title" type="Label" parent="TitleContainer/Titles/TitlesContainer"]
margin_right = 832.0
margin_bottom = 14.0
text = "Title"
align = 1

[node name="SubTitle" type="Label" parent="TitleContainer/Titles/TitlesContainer"]
margin_top = 38.0
margin_right = 832.0
margin_bottom = 52.0
text = "Subtitle"
align = 1

[node name="VersionNameLabel" type="Label" parent="TitleContainer/Titles"]
unique_name_in_owner = true
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -14.0

[node name="MenuContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 128
custom_constants/margin_top = 128
custom_constants/margin_left = 128
custom_constants/margin_bottom = 128

[node name="MainMenuButtons" parent="MenuContainer" instance=ExtResource( 2 )]

[node name="MasterOptionsMenu" parent="." instance=ExtResource( 3 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -240.0
margin_right = 200.0
margin_bottom = 240.0

[node name="CreditsContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_top = 128
custom_constants/margin_bottom = 32

[node name="Credits" parent="CreditsContainer" instance=ExtResource( 8 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 128.0
margin_right = 1024.0
margin_bottom = 568.0

[node name="FlowControlContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="FlowControl" type="Control" parent="FlowControlContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 1008.0
margin_bottom = 584.0
mouse_filter = 2

[node name="BackButton" parent="FlowControlContainer/FlowControl" instance=ExtResource( 5 )]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -40.0
margin_right = 62.0
text = "Back"

[connection signal="pressed" from="MenuContainer/MainMenuButtons/ButtonsContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MenuContainer/MainMenuButtons/ButtonsContainer/TutorialButton" to="." method="_on_TutorialButton_pressed"]
[connection signal="pressed" from="MenuContainer/MainMenuButtons/ButtonsContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="MenuContainer/MainMenuButtons/ButtonsContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="MenuContainer/MainMenuButtons/ButtonsContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="end_reached" from="CreditsContainer/Credits" to="." method="_on_Credits_end_reached"]
[connection signal="pressed" from="FlowControlContainer/FlowControl/BackButton" to="." method="_on_BackButton_pressed"]

[editable path="MenuContainer/MainMenuButtons"]
